--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^4.0.6
   json_annotation: ^4.7.0
   build_runner: ^2.3.0
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
