--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   json_annotation: ^4.7.0
   build_runner: ^2.3.0
   flutter_bloc: ^8.1.1
+  cached_network_image: ^3.2.2
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
