--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   cached_network_image: ^3.2.2
   shimmer: ^2.0.0
+  lazy_load_scrollview: ^1.3.0
 
 dev_dependencies:
   flutter_test:
